// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumbs /> render matches snapshot 1`] = `<Breadcrumbsstyles__StyledBreadcrumbs />`;

exports[`<Breadcrumbs /> render matches snapshot 2`] = `
<Breadcrumbsstyles__StyledBreadcrumbs>
  <Breadcrumbsstyles__Crumb
    key="9ab47eadf44d397992b4cb6b15b1f221e198908b"
  >
    <div />
  </Breadcrumbsstyles__Crumb>
</Breadcrumbsstyles__StyledBreadcrumbs>
`;

exports[`<Breadcrumbs /> render matches snapshot 3`] = `
<Breadcrumbsstyles__StyledBreadcrumbs>
  <Breadcrumbsstyles__Crumb
    key="a82e8c5ff9d56218f85ee5fafe0d30fa7bcbcf3b"
  >
    <Breadcrumbsstyles__CrumbLink
      data-active={false}
      to="bar"
    >
      foo
    </Breadcrumbsstyles__CrumbLink>
  </Breadcrumbsstyles__Crumb>
</Breadcrumbsstyles__StyledBreadcrumbs>
`;

exports[`<Breadcrumbs /> render matches snapshot 4`] = `
<Breadcrumbsstyles__StyledBreadcrumbs>
  <Breadcrumbsstyles__Crumb
    key="a82e8c5ff9d56218f85ee5fafe0d30fa7bcbcf3b"
  >
    <Breadcrumbsstyles__CrumbLink
      data-active={false}
      to="bar"
    >
      foo
    </Breadcrumbsstyles__CrumbLink>
  </Breadcrumbsstyles__Crumb>
  <Breadcrumbsstyles__Crumb
    key="fcea48774eac6847e055e5309259828d20316a02"
  >
    <div />
  </Breadcrumbsstyles__Crumb>
</Breadcrumbsstyles__StyledBreadcrumbs>
`;
